# net-speed-monitor

./: .pylintrc  README.md  net_speed_monitor.py  pyproject.toml  sample.json  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  pythonpackage.yml
