[tool.poetry]
name = "net-speed-monitor"
version = "0.2.0"
description = "A tool for monitoring Internet connection speed"
authors = ["Allan Lewis <allanlewis99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6 ^3.7 ^3.8"
bitmath = "^1.3"
click = "^7"
humanize = "^2"
python-dateutil = "^2"
tabulate = "^0.8"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.6"
pydocstyle = "^5.0"
pylint = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
